# gpm-django-be

./: .coveragerc  .gitignore  manage.py  pyproject.toml  pytest.ini
core/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_populate_goals.py  0003_alter_groupgoals_options_user_matricola.py  0004_auto_populate_topics.py  0005_alter_user_matricola.py
gpm_django_be/: asgi.py  settings.py  urls.py  wsgi.py
group_projects/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
group_projects/migrations/: 0001_initial.py  0002_initial.py  0003_create_goals.py  0004_create_topics.py
group_projects/tests/: test_models.py  test_serializers.py  test_validators.py  test_views.py
tests/core/: test_models.py  test_validators.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_matricola.py
users/tests/: test_models.py  test_serializers.py  test_views.py
